# altv-js-module-v2-1

./: .clang-format  LICENSE.txt
.github/: CODEOWNERS
.github/workflows/: deploy.yaml
client/: CMakeLists.txt
client/js/: entity.js
client/js/classes/: textDecoder.js  textEncoder.js
client/js/compatibility/: core.js
client/js/compatibility/classes/: focusData.js  textDecoder.js  textEncoder.js  virtualEntity.js  webSocketClient.js
client/js/compatibility/events/: player.js
client/src/: CJavaScriptResource.cpp  CJavaScriptRuntime.cpp  CJavaScriptRuntime.h  Main.cpp
client/src/classes/: Handling.cpp  HandlingData.cpp  TextDecoder.cpp  TextEncoder.cpp  Vehicle.cpp
client/src/events/: ClientEvent.cpp
client/src/helpers/: IModuleHandler.cpp  IModuleHandler.h
client/src/modules/: AltModule.cpp  CompatibilityModule.cpp  CppBindingsModule.cpp  NativesModule.cpp
client/src/namespaces/: FocusDataNamespace.cpp  VoiceNamespace.cpp
server/js/compatibility/: core.js
server/js/compatibility/classes/: vehicle.js  virtualEntity.js
server/js/compatibility/events/: player.js
server/src/: CNodeResource.cpp  CNodeResource.h
server/src/classes/: Checkpoint.cpp  Entity.cpp  Player.cpp  Vehicle.cpp  VirtualEntity.cpp
shared/js/: entityUtils.js  events.js  factory.js  utils.js
shared/js/classes/: vector.js
shared/js/compatibility/: events.js
shared/js/compatibility/events/: player.js  script.js
shared/js/compatibility/utils/: events.js
shared/js/events/: voice.js
shared/js/helpers/: events.js
shared/src/: Logger.cpp  Logger.h  ScriptObject.cpp
shared/src/classes/: SharedVehicle.cpp  SharedVirtualEntity.cpp
shared/src/helpers/: CallContext.h  Convert.cpp  JS.h  ValueBuffer.cpp
shared/src/interfaces/: IScriptObjectHandler.cpp
shared/src/modules/: CompatibilityModule.cpp  SharedCppBindingsModule.cpp  SharedModule.cpp
tools/: deinit-cppsdk.bat
types/client/: index.d.ts  package.json
types/natives/: index.d.ts  package.json
types/server/: index.d.ts  package.json
types/shared/: index.d.ts  package.json
